<resources>
    <string name="app_name">KDF</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- navigation drawer items title -->
    <string-array name="NavItems">
        <item>Home</item>
        <item>Notices</item>
        <item>Members</item>
        <item>Notes</item>
        <item>Committee</item>
        <item>Contact Us</item>
        <item>Featured App</item>
    </string-array>


    <!-- Nav Drawer List Item Icons -->
    <string-array name="NavIcons">
        <item>@drawable/ic_home_black_24dp</item>
        <item>@drawable/ic_info_black_24dp</item>
        <item>@drawable/ic_contacts_black_24dp</item>
        <item>@drawable/ic_note_add_black_24dp</item>
        <item>@drawable/ic_assistant_black_24dp</item>
        <item>@drawable/ic_group_black_24dp</item>
        <item>@drawable/ic_stars_black_24dp</item>

    </string-array>

    <string name="kdf_text_nepali">sf]O/fnf 8]enKd]G6 kmfp08]zg </string>
    <string name="kdf_text_english">Koirala Development Foundation</string>
    <string name="kdf_intro">kl/ro M   </string>
    <string name="kdf_intro_description"></string>
    <string name="kdf_organisation">;+:yfsf] sfof{no M </string>
    <string name="kdf_organisation_description"></string>
    <string name="kdf_objective">;+:yfsf] cl:tTj tyf pb]Zox?  M </string>
    <string name="kdf_objective_description"></string>
    <string name="kdf_membership">;+:yfsf] ;b:otf k|flKtsf] nflu cfjZos of]Uotf M </string>
    <string name="kdf_membership_description"></string>
    <string name="kdf_general">sfo{ ;ldltsf] u7g M  </string>
    <string name="kdf_general_description"></string>
    <string name="kdf_central_board">s]Gb|Lo sfo{ ;ldlt M</string>
    <string name="kdf_central_board_description"></string>

    <string name="developer_a">Amrit Khatiwada</string>
    <string name="developer_b">Bijay Dulal</string>
    <string name="developer_c">Abhishek Koirala</string>

    <string name="developer_phone_a"></string>
    <string name="developer_phone_b"></string>
    <string name="developer_phone_c">+9779849282281</string>


    <string name="developer_email_a">amrit008@gmail.com</string>
    <string name="developer_email_b">yesbijay@gmail.com</string>
    <string name="developer_email_c">readeravskh@gmail.com</string>
    <string name="silptech_email">silptechnepal@gmail.com</string>

    <string name="aboutRegNo">949/065-066</string>
    <string name="aboutPanNo">303768821</string>
    <string name="aboutCOffice">Central Office: Battisputali-9, Kathmandu,Nepal</string>
    <string name="centralContactOneName">Rishiraj Koirala</string>
    <string name="centralContactOneNumber">9851051669</string>
    <string name="centralContactTwoName">Nawaraj Koirala</string>
    <string name="centralContactTwoNumber">9841286783</string>
    <string name="centralContactTwoEmail">nawarajkoirala50@gmail.com</string>
    <string name="centralContactThreeName">Khemraj Koirala</string>
    <string name="centralContactThreeNumber">9851052742</string>
    <string name="aboutRCOffice">Tanki-Sinwari-1, Morang, Nepal</string>
    <string name="regionalContactOneName">Ishwor Koirala</string>
    <string name="regionalContactOneNumber">9852030766</string>
    <string name="regionalContactTwoName">Dibyaraj Koirala</string>
    <string name="regionalContactTwoNumber">9842022264</string>
    <string name="regionalContactThreeName">Nabin Koirala</string>
    <string name="regionalContactThreeNumber">9852030671</string>

    //facebook app id
    <string name="facebook_app_id">183894195330052</string>

    <!-- Committee tabs title -->
    <string-array name="CommitteeTabs">
        <item>Kendriya Sadasya</item>
        <item>Sallahkar Samiti</item>
        <item>Tanki Sinwari Samiti</item>
    </string-array>

    <!--silptech developer page on play.gogle-->
    <string name="more_from_company">https://play.google.com/store/apps/dev?id=5415272214728400872</string>
    <string name="silptech_facebook_pageId">1943955562497498</string>

    <!-- Text for displaying toast to user on crash -->
    <string name="crash_toast_text">Ooooops ! I crashed, but a report can be sent to my developer
        to help fix the issue !</string>

</resources>
