<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relative_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="KOIRALA DEVELOPMENT FOUNDATION"
            android:textColor="@color/material_palette_light" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:paddingTop="3dp"
            android:text="Company Registration No : "
            android:textColor="@color/material_palette_light" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_toRightOf="@+id/textView2"
            android:paddingTop="3dp"
            android:text="@string/aboutRegNo"
            android:textColor="@color/black" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:paddingTop="5dp"
            android:text="Pan No : "
            android:textColor="@color/material_palette_light" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_toRightOf="@+id/textView3"
            android:paddingTop="5dp"
            android:text="@string/aboutPanNo"
            android:textColor="@color/black" />

    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_below="@+id/relative_layout1"
        android:background="@color/light" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/relative_layout1"
        android:padding="10dp">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/imageView"
                    android:text="Central Office"
                    android:textColor="@color/material_palette" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView5"
                    android:text="Battisputali-9, Kathmandu,Nepal" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:paddingTop="12dp"
                    android:text="Contact Person"
                    android:textColor="@color/material_palette" />

                <LinearLayout
                    android:id="@+id/layout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView7"
                    android:orientation="horizontal"
                    android:paddingTop="3dp"
                    android:weightSum="5">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/centralContactOneName"
                        android:textColor="@color/black_light" />

                    <ImageView
                        android:id="@+id/call_cc_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_phone_black_24dp" />


                </LinearLayout>
                />

                <LinearLayout
                    android:id="@+id/layout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout1"
                    android:orientation="horizontal"

                    android:paddingTop="12dp"
                    android:weightSum="5">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/centralContactTwoName"
                        android:textColor="@color/black_light" />

                    <ImageView
                        android:id="@+id/call_cc_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_phone_black_24dp" />

                    <ImageView
                        android:id="@+id/mail_cc_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_email_black_24dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout2"
                    android:orientation="horizontal"
                    android:paddingTop="12dp"
                    android:weightSum="5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/centralContactThreeName"
                        android:textColor="@color/black_light" />

                    <ImageView
                        android:id="@+id/call_cc_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_phone_black_24dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:paddingTop="10dp"
                    android:layout_height="wrap_content">

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="2dp"
                        android:background="@color/light"
                         />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:text="Branch Office"
                    android:textColor="@color/material_palette" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView11"
                    android:text="@string/aboutRCOffice" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView13"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="12dp"
                    android:text="Contact Person"
                    android:textColor="@color/material_palette" />

                <LinearLayout

                    android:id="@+id/layout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView14"
                    android:orientation="horizontal"
                    android:paddingTop="3dp"
                    android:weightSum="5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/regionalContactOneName"
                        android:textColor="@color/black_light" />

                    <ImageView
                        android:id="@+id/call_rc_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_phone_black_24dp" />

                </LinearLayout>

                <LinearLayout

                    android:id="@+id/layout5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout4"
                    android:orientation="horizontal"
                    android:paddingTop="12dp"
                    android:weightSum="5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/regionalContactTwoName"
                        android:textColor="@color/black_light" />

                    <ImageView
                        android:id="@+id/call_rc_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_phone_black_24dp" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/layout6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout5"
                    android:orientation="horizontal"
                    android:paddingTop="12dp"
                    android:weightSum="5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/regionalContactThreeName"
                        android:textColor="@color/black_light" />

                    <ImageView
                        android:id="@+id/call_rc_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_phone_black_24dp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>
